--- a/src/images/List.module.css
+++ b/src/images/List.module.css
@@ -12,6 +12,10 @@
     padding: 0.5rem;
 }
 
+.selected {
+    background: #ddd;
+}
+
 .listItem .multiSelect {
     display: flex;
     align-items: center;
