--- a/src/images/List.module.css
+++ b/src/images/List.module.css
@@ -1,6 +1,27 @@
+.list {
+    margin: 0 0.5rem;
+}
+
 .listToolbar {
-    margin-top: 0.5rem;
+    display: flex;
+    border-bottom: 1px solid #ddd;
+    height: 2.25rem;
     margin-bottom: 0.5rem;
+    padding: 0.5rem;
+}
+
+.listToolbar .btnDanger {
+    color: #fff;
+    background: #bb2d3b;
+    border: 2px solid #b02a37;
+    border-radius: 0.25rem;
+    padding: 0.5rem 0.75rem;
+    cursor: pointer;
+}
+
+.listToolbar .btnDanger:hover {
+    border-color: #a52834;
+    background: #b02a37;
 }
 
 .listItem {
@@ -9,11 +30,13 @@
     border: 1px solid #ddd;
     border-radius: 0.5rem;
     margin-bottom: 0.25rem;
-    padding: 0.5rem;
+    padding: 0.75rem;
 }
 
 .selected {
-    background: #ddd;
+    color: #842029;
+    border: #f5c2c7;
+    background: #f8d7da;
 }
 
 .listItem .multiSelect {
@@ -36,13 +59,7 @@
 
 .listItem .description p {
     margin: 0;
-}
-
-.listItem .deleteButton {
-    background: #ff4646;
-    border: 2px solid #cc2929;
-    border-radius: 0.25rem;
-    cursor: pointer;
+    margin-top: 0.5rem;
 }
 
 .listItem .metadata {
@@ -52,4 +69,12 @@
     justify-content: center;
     color: #444;
     text-align: right;
+}
+
+.nodeTag {
+    color: #fff;
+    background: rgb(36, 137, 231);
+    padding: 0.25rem;
+    margin-right: 0.25rem;
+    border-radius: 0.25rem;
 }
