--- a/src/images/List.module.css
+++ b/src/images/List.module.css
@@ -72,9 +72,10 @@
 }
 
 .nodeTag {
+    font-size: 0.9rem;
     color: #fff;
     background: rgb(36, 137, 231);
-    padding: 0.25rem;
+    padding: 0.25rem 0.5rem;
     margin-right: 0.25rem;
     border-radius: 0.25rem;
 }
