--- a/src/images/List.module.css
+++ b/src/images/List.module.css
@@ -33,8 +33,8 @@
     padding: 0.75rem;
 }
 
-.selected {
-    color: #842029;
+.deleted {
+    color: #c4323e;
     border: #f5c2c7;
     background: #f8d7da;
 }
@@ -57,6 +57,14 @@
     margin: 0;
 }
 
+.listItem .description h2 small {
+    padding-left: 0.25rem;
+}
+
+.listItem.deleted .description h2 small {
+    color: #d16d76;
+}
+
 .listItem .description p {
     margin: 0;
     margin-top: 0.5rem;
@@ -67,8 +75,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: #444;
     text-align: right;
+    color: #444;
+}
+
+.listItem.deleted .metadata {
+    color: rgb(129, 49, 49);
 }
 
 .nodeTag {
